--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -14,8 +14,11 @@ repository:
   allow_rebase_merge: true
 
 teams:
-  - name: maintainers
+  - name: authors
     permission: admin
+
+  - name: maintainers
+    permission: push
 
 branches:
   - name: master
@@ -27,17 +30,19 @@ branches:
         dismissal_restrictions:
           users: []
           teams:
+            - authors
             - maintainers
 
       required_status_checks:
         strict: true
         contexts: []
 
-      enforce_admins: true
+      enforce_admins: false
 
       restrictions:
         users: []
         teams:
+          - authors
           - maintainers
 
 labels:
